--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.img1 {
+  width: 80%;
+  height: 200px;
+  margin: 0 auto;
+  background-image: url(img/box1.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.img2 {
+  width: 80%;
+  height: 200px;
+  margin: 0 auto;
+  background-image: url(img/box2.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.img3 {
+  width: 80%;
+  height: 200px;
+  margin: 0 auto;
+  background-image: url(img/box3.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+.img4 {
+  width: 80%;
+  height: 200px;
+  margin: 0 auto;
+  background-image: url(img/box4.jpg);
+  background-size: cover;
+  background-position: center;
+}
